--- a/views/pages/event/index.ejs
+++ b/views/pages/event/index.ejs
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
+<%- include('../layout/head') %>
+
+    <title>Home Page</title>
     <body>
-    
+<%- include('../layout/header') %>
+
+ <main>
+<br><br><br><br><br><br><br><br>
 <%- include('./search_form') %>
-
- 
-
+     
 <ul>
  <% events.forEach(el => { %>
  <h4> Name : <%= el.eventName %></h4>
@@ -26,5 +25,8 @@
 
 
  <% } %>
+ </main>
+     <%- include('../layout/footer') %>
+ <script src="js/app.js"></script>
     </body>
 </html>
