adding reset file to the head

--- a/views/pages/event/search_form.ejs
+++ b/views/pages/event/search_form.ejs
@@ -2,7 +2,7 @@
     <section class="search-card">
     <form action="/searches" method="POST">
     <fieldset>
-    <legend>Search For Events</legend>
+  <legend>
     <label for="search">Search For Eents</label>
     <input type="text" name="searched">
 
@@ -27,6 +27,7 @@
 </select>
 
     <button type="submit">Search</button>
+    </legend>
     </fieldset>
     
     </form>
