--- a/views/pages/event/index.ejs
+++ b/views/pages/event/index.ejs
@@ -6,20 +6,22 @@
     <body>
 <%- include('../layout/header') %>
 
- <main>
-<br><br><br><br><br><br><br><br>
-<%- include('./search_form') %>
-     
-<ul>
+ <main class="grid index-main">
+
+
  <% events.forEach(el => { %>
- <h4> Name : <%= el.eventName %></h4>
- <img src="<%=el.imageUrl%>" alt="<%= el.eventName %>">
+<article>
+ <img class="index-img" src="<%=el.imageUrl%>" alt="<%= el.eventName %>">
+  <div class="text">
+ <h4 class="index-h4"> Name : <%= el.eventName %></h4>
  <h4>Location :  <%= el.venues %> ,  <%= el.city %>  ,  <%= el.country %> </h4>
+  <button type="button"><a href="/#/<%=el.id%>">View Details</a> </button> 
+</div>
 
-  <button type="button"><a href="/books/<%=el.id%>">View Details</a> </button> 
+</article>
       <% }); %>
-</ul>
 
+ 
 <%  if (Object.keys(events).length === 0) { %>
  <h3>Sorry , No result was found</h3>
 
@@ -29,3 +31,6 @@
  <script src="js/app.js"></script>
     </body>
 </html>
+
+
+
