--- a/views/pages/event/search_form.ejs
+++ b/views/pages/event/search_form.ejs
@@ -1,4 +1,4 @@
-<main>
+<main style="margin:0 0 2% 2%;">
     <section class="search-card">
     <form action="/searches" method="POST">
     <fieldset>
