--- a/views/pages/layout/footer.ejs
+++ b/views/pages/layout/footer.ejs
@@ -2,7 +2,7 @@
 
     <div class="footerTwo">
 
-        <h3> Node <span>titan</span></h3>
+        <h3> Event <span>full</span></h3>
 
         <p class="footerThree">
             <a href="#">Home</a>
