--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -264,6 +264,11 @@ footer{
 	float: right;
 }
 
+/* .main1{
+		box-sizing: border-box;
+		width: 100%;
+		height: 100%;
+} */
 /* If you don't want the footer to be responsive, remove these media queries */
 
 @media (max-width: 1000px) {
