--- a/views/pages/event/search.ejs
+++ b/views/pages/event/search.ejs
@@ -18,7 +18,21 @@
  <img src="<%=el.imageUrl%>" alt="<%= el.eventName %>">
  <h4>Location :  <%= el.venues %> ,  <%= el.city %>  ,  <%= el.country %> </h4>
 <h4>Start Date :  <%= el.startDate %>  End Date : <%= el.end_date %>  </h4>
-  <button type="button"><a href="/books/<%=el.id%>">View Details</a> </button> 
+  <!-- <button type="button"><a href="/books/<%=el.id%>">View Details</a> </button>   -->
+  <form action="/searchespage" method="POST">
+    <input type="hidden" value="<%= el.eventId %>" name="eventId">
+    <input type="hidden" value="<%= el.eventName %>" name="eventName">
+    <input type="hidden" value="<%=el.imageUrl%>" name="img">
+    <input type="hidden" value="<%= el.venues %>" name="venues">
+    <input type="hidden" value="<%= el.city %>" name="city">
+    <input type="hidden" value="<%= el.country %>" name="country">
+    <input type="hidden" value="<%= el.countryCode %>" name="countryCode">
+    <input type="hidden" value="<%= el.end_date %>" name="enddate">
+    <input type="hidden" value="<%= el.startDate %>" name="startdate">
+    <input type="hidden" value="<%= el.Description %>" name="description">
+    <input type="hidden" value="<%= el.url %>" name="url">
+    <input type="submit" value="Add this Event">
+</form>
       <% }); %>
 </ul>
 
