--- a/views/user-signin-up/sign-in.ejs
+++ b/views/user-signin-up/sign-in.ejs
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login-page</title>
+    <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/style.css"> 
 </head>
 
 <body id="signIn">
     <div id="login" class="animated bounce">
         <h2>login</h2>
-        <form action=""  method="POST">
+        <p>Welcome back  👋</p>
+        <form action=""  method="GET">
             <div class="input">
                 <label for="name" class="entypo-user"></label>
                 <input type="text" name="username" id="name" placeholder="username" />
@@ -21,7 +24,7 @@
                 <input type="password" name="password" " id="pw " placeholder="•••••• " />
             </div>
             <input type="submit" value="Sign In " />
-           <p>You do not have an account? <a href='/sign-up' target="_blank" rel="noopener noreferrer">Register now</a> </p> 
+           <p>You do not have an account? <a href='/sign-Up' target="_blank" rel="noopener noreferrer">Register now</a> </p> 
 
         </form>
           
