--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
+@import url(http://weloveiconfonts.com/api/?family=entypo);
 
 /* @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
