--- a/views/user-signin-up/sign-up.ejs
+++ b/views/user-signin-up/sign-up.ejs
@@ -2,12 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Sign Up</title>
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <%- include('./layout/header') %>
+
+    
 </head>
 
 <body id="Sign-UP">
