--- a/views/pages/user-signin-up/sign-up.ejs
+++ b/views/pages/user-signin-up/sign-up.ejs
@@ -4,7 +4,7 @@
 <head>
     
     <title>Sign Up</title>
-    <%- include('./layout/header') %>
+    <%- include('../layout/head') %>
 
     
 </head>
