about us page and it's css finished

--- a/public/styles/aboutUs.css
+++ b/public/styles/aboutUs.css
@@ -19,23 +19,14 @@ body{
   margin-left: auto;
 }
 
-@media (min-width: 768px) {
-  .container {
-    width: 750px;
+@media (max-width: 700px) {
+
+  .team-grid h4 {
+    font-size: 10px!important;
   }
 }
 
-@media (min-width: 992px) {
-  .container {
-    width: 970px;
-  }
-}
 
-@media (min-width: 1200px) {
-  .container {
-    width: 1170px;
-  }
-}
 h3.title {
     color: #faad81;
     font-size: 50px;
@@ -71,101 +62,6 @@ h3.title {
     color: #000;
     font-weight: 600;
     margin: 40px 0 20px;
-}
-
-.team-grid p {
-    color: #777;
-    font-size: 1em;
-}
-
-.social-nav li {
-    display: inline-block;
-}
-
-.social-nav a {
-    display: inline-block;
-    float: none;
-    width: 30px;
-    height: 30px;
-    text-decoration: none;
-    cursor: pointer;
-    text-align: center;
-    line-height: 30px;
-    background: #000;
-    position: relative;
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-}
-
-.model-3d-0 a {
-    background: #5C5B5B;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-}
-
-.model-3d-0 .front,
-.model-3d-0 .back {
-    width: 30px;
-    height: 30px;
-    font-size: 1em;
-    color: #fff;
-    background: #faad81;
-    position: absolute;
-    top: 0;
-    left: 0;
-    -webkit-transform: translateZ(18px);
-    -moz-transform: translateZ(18px);
-    -ms-transform: translateZ(18px);
-    -o-transform: translateZ(18px);
-    transform: translateZ(18px);
-    -webkit-backface-visibility: visible;
-    -moz-backface-visibility: visible;
-    -ms-backface-visibility: visible;
-    -o-backface-visibility: visible;
-    backface-visibility: visible;
-}
-
-.model-3d-0 .back {
-    font-size: 1em;
-    color: #fff;
-    -webkit-transform: rotateX(90deg) translateZ(18px);
-    -moz-transform: rotateX(90deg) translateZ(18px);
-    -ms-transform: rotateX(90deg) translateZ(18px);
-    -o-transform: rotateX(90deg) translateZ(18px);
-    transform: rotateX(90deg) translateZ(18px);
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-.twitter .back,
-.facebook .back,
-.instagram .back,
-.pinterest .back {
-    background: #81cdfa;
-}
-
-.model-3d-0 a:hover {
-    -webkit-transform: rotateX(-90deg);
-    -moz-transform: rotateX(-90deg);
-    -ms-transform: rotateX(-90deg);
-    -o-transform: rotateX(-90deg);
-    transform: rotateX(-90deg);
-}
-
-.model-3d-0 a:hover .back {
-    -webkit-backface-visibility: visible;
-    -moz-backface-visibility: visible;
-    -ms-backface-visibility: visible;
-    -o-backface-visibility: visible;
-    backface-visibility: visible;
 }
 
 .stack img {
