--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -37,3 +37,183 @@
   position: absolute;
   bottom: 7px; 
 }
+/* about Us css */
+/* -------------- */
+*{
+  box-sizing: border-box;
+}
+body{
+  font-size: 100%;
+  background: #fff;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.42857143;
+  color: #333;
+}
+.team {
+  background: #f5f5f5;
+  padding: 5em 0;
+}
+.container {
+padding-right: 15px;
+padding-left: 15px;
+margin-right: auto;
+margin-left: auto;
+}
+
+@media (max-width: 700px) {
+
+.team-grid h4 {
+  font-size: 10px!important;
+}
+}
+
+
+h3.title {
+  color: #faad81;
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 1em;
+  font-weight: 600;
+  font-style: italic;
+}
+.team-grid {
+  text-align: center;
+}
+.col-xs-4 {
+  width: 20%;
+  float: left;
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+/*-- Team --*/
+
+.team {
+  background: #f5f5f5;
+  padding: 5em 0;
+}
+
+.team-grid {
+  text-align: center;
+}
+
+.team-grid h4 {
+  font-size: 25px;
+  color: #000;
+  font-weight: 600;
+  margin: 40px 0 20px;
+}
+
+.stack img {
+  width: 100%;
+  height: auto;
+  vertical-align: bottom;
+  border: 10px solid #fff;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  -o-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  -ms-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+}
+
+.stack:last-of-type {
+  margin-right: 0;
+}
+
+/* Third stack example (One stack element rotated in the opposite direction) */
+
+.stack.twisted:before {
+  -webkit-transform: rotate(4deg);
+  -moz-transform: rotate(4deg);
+  transform: rotate(4deg);
+  -moz-transform: rotate(4deg);
+  -o-transform: rotate(4deg);
+}
+
+.stack.twisted:after {
+  -webkit-transform: rotate(-4deg);
+  -moz-transform: rotate(-4deg);
+  transform: rotate(-4deg);
+  -ms-transform: rotate(-4deg);
+  -o-transform: rotate(-4deg);
+}
+
+/* Reset all rotations on hover */
+
+.stack:hover:before,
+.stack:hover:after,
+.team-grid:hover .stack:before,
+.team-grid:hover .stack:after {
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+}
+
+/* Stacks creted by the use of generated content */
+
+.stack:before,
+.stack:after {
+  content: "";
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -moz-border-radius: 3px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border: 10px solid #fff;
+  left: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  -ms-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  -o-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  -webkit-transition: 0.3s all ease-out;
+  -moz-transition: 0.3s all ease-out;
+  transition: 0.3s all ease-out;
+  -o-transition: 0.3s all ease-out;
+  -ms-transition: 0.3s all ease-out;
+}
+
+.stack:before {
+  top: 4px;
+  z-index: -10;
+}
+
+/* 1st element in stack (behind image) */
+
+.stack:after {
+  top: 8px;
+  z-index: -20;
+}
+
+/* 2nd element in stack (behind image) */
+
+.stack {
+  float: none;
+  width: 92%;
+  margin: 3% 0% 8% 4%;
+  position: relative;
+  z-index: 1;
+}
+
+/*-- //Team --*/
