about us page and it's css fully fininshed

--- a/views/pages/layout/header.ejs
+++ b/views/pages/layout/header.ejs
@@ -16,7 +16,7 @@
                 <a href="javascript:{}" onclick="document.getElementById('search').submit(); return false;">Search</a>
                 </form>
             <a href="/user">Your list</a>
-            <a href="/aboutus">About</a>
+            <a href="/about">About</a>
             <a href="/logout">Logout</a>
         </div>
     </div>
