--- a/views/pages/aboutUs/aboutUs.ejs
+++ b/views/pages/aboutUs/aboutUs.ejs
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/styles/reset.css">
-    <link rel="stylesheet" href="/public/styles/base.css">
-    <link rel="stylesheet" href="/public/styles/layout.css">
-    <link rel="stylesheet" href="/public/styles/module.css">
-    <title>About Us</title>
-</head> -->
-<%- include('./layout/head.ejs') %>
+    <head>
+        <%- include('../layout/head.ejs') %>
+    </head>
 <body>
-    <%- include('./layout/header.ejs') %>
+    <%- include('../layout/header.ejs') %>
     <main>
         <div class="team" id="team">
-            <!-- <div class="container2"> -->
             <h3 class="title">Node Titans Team</h3>
             <div class="team-grids">
                 <div class="col-xs-4 team-grid">
@@ -60,10 +51,10 @@
                 </div>
                 <div class="clearfix"> </div>
             </div>
-            <!-- </div> -->
         </div>
     </div>
+    <%- include('../layout/footer.ejs') %>
     </main>
-    <%- include('./layout/footer.ejs') %>
+    <script src="js/app.js"></script>
 </body>
 </html>
