--- a/views/pages/layout/footer.ejs
+++ b/views/pages/layout/footer.ejs
@@ -1,4 +1,7 @@
-<footer class="footerOne">
+<div class="wrapper">
+    <div class="push"></div>
+  </div>
+<footer class="footerOne ">
 
     <div class="footerTwo">
 
