--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -30,6 +30,15 @@ footer{
     font-family: 'Boogaloo', cursive !important;
     font-size: 22px;
 }
+.wrapper {
+    min-height: 100%;
+  
+    margin-bottom: -50px;
+  }
+  .footer,
+  .push {
+    height: 50px;
+  }
 .header {
   min-height: 100px;
   height: 50vh;
@@ -57,6 +66,7 @@ footer{
     overflow: hidden;
     width: 100%;
     z-index: 99999999;
+	top: 0;
   }
   .sticky #myLinks {      
     float: right;
