add responsive style for userlist and details page

--- a/views/pages/user/userList.ejs
+++ b/views/pages/user/userList.ejs
@@ -16,7 +16,7 @@
             <h4>Start Date :  <%= element.startDate %>  End Date : <%= element.end_date %>  </h4>
             <br>
             <section>
-            <button class="btn" type="button"><a href="/user/<%=element.id%>">View Details</a> </button> 
+            <button class="btn" type="button"><a style="text-decoration: none;" href="/user/<%=element.id%>">View Details</a> </button>  
         </section>
         </section>
         <% }); %>
