--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -302,7 +302,8 @@ footer{
 	width: 380px;
 }
 .btn{
-	margin-top: auto;
+	height: 40px;
+	margin-top: 0px;
 	background-color:orange;
 	border: 0;
 	border-radius: 5px;
@@ -312,7 +313,9 @@ footer{
 	font-weight: bold;
 	line-height: 1.4;
 	padding: 10px;
-	width: 180px
+	width: 180px;
+	text-decoration: none;
+
 }
 .img{
 	width: 99%;
