--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -198,3 +198,28 @@ h3.title {
 }
 
 /*-- //Team --*/
+.list-container{
+	margin: 0 1%;
+	margin-top: 0px;
+	display: grid;
+    grid-column-gap: 10px;
+    grid-template-columns: auto auto auto;
+    background-color: white;
+    padding: 50px;
+    width: 100%;
+    height: 110%;
+}
+.list{
+	margin-left: 30px;
+	margin-top: 20px;
+	background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 15px;
+    text-align: center;
+    box-sizing: border-box;
+	box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+	border: 1px solid #ccc;
+	height:400px; 
+	width: 380px;
+}
