make the about page responsive and add links to github and linkedin for each team memeber

--- a/views/pages/aboutUs/aboutUs.ejs
+++ b/views/pages/aboutUs/aboutUs.ejs
@@ -16,6 +16,28 @@
                         </div>
                     </div>
                     <h4>Duha Al-Azzm</h4>
+                    <ul class="social-nav model-3d-0">
+						<li>
+							<a href="https://github.com/duhaalazzam" target="_blank" class="github">
+								<div class="front">
+									<i class="fa fa-github icon-border-2"></i>
+								</div>
+								<div class="back">
+									<i class="fa fa-github icon-border-2"></i>
+								</div>
+							</a>
+						</li>
+						<li>
+							<a href="https://www.linkedin.com/in/duha-alazzam/" target="_blank" class="linkedin">
+								<div class="front">
+									<i class="fa fa-linkedin icon-border-2"></i>
+								</div>
+								<div class="back">
+									<i class="fa fa-linkedin icon-border-2"></i>
+								</div>
+							</a>
+						</li>
+					</ul>
                 </div>
                 <div class="col-xs-4 team-grid">
                     <div class="pic">
@@ -24,6 +46,28 @@
                         </div>
                     </div>
                     <h4>Monther Al-Khawaldeh</h4>
+                    <ul class="social-nav model-3d-0">
+						<li>
+							<a href="https://github.com/Monther-alkhwaldeh" target="_blank" class="github">
+								<div class="front">
+									<i class="fa fa-github icon-border-2"></i>
+								</div>
+								<div class="back">
+									<i class="fa fa-github icon-border-2"></i>
+								</div>
+							</a>
+						</li>
+						<li>
+							<a href="https://www.linkedin.com/in/munther-alkhwaldeh-5b9a55a9/" target="_blank" class="linkedin">
+								<div class="front">
+									<i class="fa fa-linkedin icon-border-2"></i>
+								</div>
+								<div class="back">
+									<i class="fa fa-linkedin icon-border-2"></i>
+								</div>
+							</a>
+						</li>
+					</ul>
                 </div>
                 <div class="col-xs-4 team-grid">
                     <div class="pic">
@@ -32,6 +76,28 @@
                         </div>
                     </div>
                     <h4>Manar AbdelKarim</h4>
+                    <ul class="social-nav model-3d-0">
+						<li>
+							<a href="https://github.com/ManarAbdelkarim" target="_blank" class="github">
+								<div class="front">
+									<i class="fa fa-github icon-border-2"></i>
+								</div>
+								<div class="back">
+									<i class="fa fa-github icon-border-2"></i>
+								</div>
+							</a>
+						</li>
+						<li>
+							<a href="https://www.linkedin.com/in/manar-abdelkarim-860436180/" target="_blank" class="linkedin">
+								<div class="front">
+									<i class="fa fa-linkedin icon-border-2"></i>
+								</div>
+								<div class="back">
+									<i class="fa fa-linkedin icon-border-2"></i>
+								</div>
+							</a>
+						</li>
+					</ul>
                 </div>
                 <div class="col-xs-4 team-grid">
                     <div class="pic">
@@ -40,6 +106,28 @@
                         </div>
                     </div>
                     <h4>Noura Al-Quraan </h4>
+                    <ul class="social-nav model-3d-0">
+						<li>
+							<a href="https://github.com/Noura-Alquran" target="_blank" class="github">
+								<div class="front">
+									<i class="fa fa-github icon-border-2"></i>
+								</div>
+								<div class="back">
+									<i class="fa fa-github icon-border-2"></i>
+								</div>
+							</a>
+						</li>
+						<li>
+							<a href="https://www.linkedin.com/in/noura-alquran/" target="_blank" class="linkedin">
+								<div class="front">
+									<i class="fa fa-linkedin icon-border-2"></i>
+								</div>
+								<div class="back">
+									<i class="fa fa-linkedin icon-border-2"></i>
+								</div>
+							</a>
+						</li>
+					</ul>
                 </div>
                 <div class="col-xs-4 team-grid">
                     <div class="pic">
@@ -48,6 +136,28 @@
                         </div>
                     </div>
                     <h4>Obada Al-Athamneh</h4>
+                    <ul class="social-nav model-3d-0">
+						<li>
+							<a href="https://github.com/obada-athamneh" target="_blank" class="github">
+								<div class="front">
+									<i class="fa fa-github icon-border-2"></i>
+								</div>
+								<div class="back">
+									<i class="fa fa-github icon-border-2"></i>
+								</div>
+							</a>
+						</li>
+						<li>
+							<a href="https://www.linkedin.com/in/obada-al-athamneh-1b9b40130/" target="_blank" class="linkedin">
+								<div class="front">
+									<i class="fa fa-linkedin icon-border-2"></i>
+								</div>
+								<div class="back">
+									<i class="fa fa-linkedin icon-border-2"></i>
+								</div>
+							</a>
+						</li>
+					</ul>
                 </div>
                 <div class="clearfix"> </div>
             </div>
