--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,10 +8,10 @@
     <title>Document</title>
 
     <style>
-        @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;700&display=swap");
+         @import url('https://fonts.googleapis.com/css2?family=Orelega+One&display=swap');
 
         * {
-            font-family: "Source Code Pro", monospace;
+            font-family: "Source Code Pro", cursive;
         }
 
         .header {
