--- a/views/pages/user-signin-up/user-profile.ejs
+++ b/views/pages/user-signin-up/user-profile.ejs
@@ -6,7 +6,7 @@
     <%- include('../layout/head') %>
 
 </head>
-<body>
+<body class="profile">
   <%- include('../layout/header') %>
 <main id="profile">
   <div class="Profile-container">
