--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -332,8 +332,6 @@
 }
 
 .input input {
-    -webkit-appearance: none;
-    -moz-appearance: none;
     appearance: none;
     background: none;
     border: none;
@@ -417,8 +415,9 @@ box-shadow:inset 1px 1px 0px #d7e0d0, 1px 2px 1px rgba(15, 4, 75, 0.808);
 .profile{
     background-color: #227fa11c;
 }
+
 .Profile-container{
-  width: 450px;
+  width: 350px;
   margin: 120px auto 120px;
   background-color: #fff;
   padding: 0 20px 20px;
@@ -428,7 +427,6 @@ box-shadow:inset 1px 1px 0px #d7e0d0, 1px 2px 1px rgba(15, 4, 75, 0.808);
 }
 .Profile-container:hover .avatar-flip {
   transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
 }
 .Profile-container:hover .avatar-flip img:first-child {
   opacity: 0;
@@ -480,4 +478,51 @@ box-shadow:inset 1px 1px 0px #d7e0d0, 1px 2px 1px rgba(15, 4, 75, 0.808);
   line-height: 26px;
   margin-bottom: 20px;
   color: #666;
+}
+.Profile-container button{
+    display: block;
+    width: 100%;
+    height: 38px;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+    background:  #ffc107c5;
+    border-radius: 5px;
+    border: 1px solid #626362;
+    outline: none;
+    cursor: pointer;
+    color:black;
+    font-size: 14px;
+}
+.Profile-container button:hover {
+background-color: rgb(2, 121, 129);
+box-shadow:inset 1px 1px 0px #d7e0d0, 1px 2px 1px rgba(15, 4, 75, 0.808);
+
+}
+
+.updateForm input[type="submit"] {
+    display: block;
+    width: 100%;
+    height: 38px;
+    box-sizing: border-box;
+    background:#ffc107c5;
+    border-radius: 5px;
+    border: 1px solid #626362;
+    outline: none;
+    cursor: pointer;
+    color: #fff;
+    font-size: 14px;
+}
+.updateForm input[type="submit"]:hover {
+background-color:rgb(2, 121, 129);
+box-shadow:inset 1px 1px 0px #d7e0d0, 1px 2px 1px rgba(15, 4, 75, 0.808);
+
+}
+.edit-form{
+    width: 350px;
+    margin: 120px auto 120px;
+    background-color: #fff;
+    padding: 0 20px 20px;
+    border-radius: 20px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.075);
+    text-align: left;
 }
