add hero images to homepage

--- a/views/pages/event/index.ejs
+++ b/views/pages/event/index.ejs
@@ -4,8 +4,39 @@
 
     <title>Home Page</title>
     <body>
-<%- include('../layout/header') %>
-
+   <%- include('../layout/header') %>
+   <section class="main">
+    <div class="content">
+      <aside class="section-one">
+        <div class="inner-content">
+          <div class="content-block">
+            <p>
+                 Do you need one website from which you can view all events by the place and date you want?
+                Our website guarantees that you can find the events you want and save your own list of them arranged by date.</p>
+          </div>
+        </div>
+      </aside>
+      <aside class="section-two">
+        <div class="inner-content">
+          <div class="content-block">
+            <p>
+            From music festivals, marathons, conferences, community rallies, and fundraisers, to gaming competitions and air guitar contests. Our mission is to bring the world together through live experiences. .</p>
+          </div>
+        </div>
+      </aside>
+      <aside class="section-three">
+        <div class="inner-content">
+            <div class="content-block">
+             <p>We are </p>
+             <form action="/about" method="GET">
+              <button>About-us</button>
+           </form> 
+        </div>
+        </div>
+      </aside>
+    </div>
+  </section>
+  
 
  <main class="grid index-main">
 
