--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -221,7 +221,7 @@
 #login {
     width: 400px;
     height:320px;
-    background:#e0ad15;
+    background:#ffc004;
     margin: auto;
     margin-top: 160px;
     padding-top: 25px;
@@ -234,7 +234,7 @@
 #Sign-up {
     width: 700px;
     height:fit-content;
-    background:#e0ad15;
+    background:#d6ac2e;
     margin: auto;
     margin-top: 20px;
     padding-top: 30px;
@@ -352,7 +352,7 @@
     width: 100%;
     height: 38px;
     box-sizing: border-box;
-    background: #0d3041;
+    background: #015555;
     border-radius: 5px;
     border: 1px solid #626362;
     outline: none;
@@ -365,7 +365,7 @@
     width: 100%;
     height: 38px;
     box-sizing: border-box;
-    background: #0d3041;
+    background: #015555;
     border-radius: 5px;
     border: 1px solid #626362;
     outline: none;
@@ -376,12 +376,12 @@
 #login input[type="submit"]:hover {
 background-color: rgb(187, 240, 237);
 box-shadow:inset 1px 1px 0px #d7e0d0, 1px 2px 1px rgba(15, 4, 75, 0.808);
-
+color: black;
 }
 #Sign-up input[type="submit"]:hover {
     background-color: rgb(187, 240, 237);
     box-shadow:inset 1px 1px 0px #d7e0d0, 1px 2px 1px rgba(15, 4, 75, 0.808);
-    
+    color: black;
     }
 .animated {
     animation-duration: 1500ms;
