--- a/views/pages/user/details.ejs
+++ b/views/pages/user/details.ejs
@@ -20,7 +20,7 @@
             <a href="<%= results[0].url%> " target="_blank"> The url for event </a>  
             <br> <br>
                <form action="/event/<%=  results[0].event_id %>?_method=DELETE" method='POST'>
-            <button class="btn" type="submit">Delet This Event</button>
+            <button class="event-details-btn" type="submit">Delete This Event</button>
         </form>
         </section>
        
