--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -279,6 +279,94 @@ footer{
 	/* font-weight: bold; */
 	float: right;
 }
+
+
+/* If you don't want the footer to be responsive, remove these media queries */
+
+@media (min-width: 960px) {
+
+	.footerOne {
+		font: bold 14px sans-serif;
+	}
+
+	.footerOne .footer-company-name{
+		font-size: 12px;
+	}
+
+	.footerOne form input,
+	.footerOne form textarea{
+		width: 250px;
+	}
+
+	.footerOne form button{
+		padding: 10px 35px;
+	}
+
+}
+@media only screen and (min-width:768px) and (max-width:960px) {
+
+	
+	.footerOne{
+		padding: 30px;
+	}
+
+	.footerOne .footerTwo,
+	.footerOne .footerFour{
+		float: none;
+		max-width: 300px;
+		margin: 0 auto;
+	}
+
+	.footerOne .footerTwo{
+		margin-bottom: 40px;
+	}
+
+	.footerOne form{
+		margin-top: 30px;
+	}
+
+	.footerOne form{
+		display: block;
+	}
+
+	.footerOne form button{
+		float: none;
+	}
+}
+
+
+@media only screen and (max-width:767px) {
+
+	.footerOne{
+		padding: 30px;
+	}
+
+	.footerOne .footerTwo,
+	.footerOne .footerFour{
+		float: none;
+		max-width: 250px;
+		margin: 0 auto;
+		position: relative;
+		right: 100px;
+	}
+
+	.footerOne .footerTwo{
+		margin-bottom: 40px;
+	}
+
+	.footerOne form{
+		margin-top: 30px;
+	}
+
+	.footerOne form{
+		display: block;
+	}
+
+	.footerOne form button{
+		float: none;
+	}
+}
+
 .list-container{
 	margin: 0 1%;
 	margin-top: 0px;
@@ -304,7 +392,7 @@ footer{
 	height:400px; 
 	width: 380px;
 }
-.btn{
+.event-details-btn{
 	height: 40px;
 	margin-top: 0px;
 	background-color:orange;
@@ -359,110 +447,4 @@ footer{
 }
 .detail-p{
 	margin-top: 10px;
-}
-/* .main1{
-		box-sizing: border-box;
-		width: 100%;
-		height: 100%;
-} */
-/* If you don't want the footer to be responsive, remove these media queries */
-
-@media (min-width: 960px) {
-
-	.footerOne {
-		font: bold 14px sans-serif;
-	}
-
-	.footerOne .footer-company-name{
-		font-size: 12px;
-	}
-
-	.footerOne form input,
-	.footerOne form textarea{
-		width: 250px;
-	}
-
-	.footerOne form button{
-		padding: 10px 35px;
-	}
-
-}
-@media only screen and (min-width:768px) and (max-width:960px) {
-
-	
-	.footerOne{
-		padding: 30px;
-	}
-
-	.footerOne .footerTwo,
-	.footerOne .footerFour{
-		float: none;
-		max-width: 300px;
-		margin: 0 auto;
-	}
-
-	.footerOne .footerTwo{
-		margin-bottom: 40px;
-	}
-
-	.footerOne form{
-		margin-top: 30px;
-	}
-
-	.footerOne form{
-		display: block;
-	}
-
-	.footerOne form button{
-		float: none;
-	}
-}
-.btn{
-	height: 40px;
-	margin-top: 0px;
-	background-color:orange;
-	border: 0;
-	border-radius: 5px;
-	cursor: pointer;
-	color: #fff;
-	font-size:16px;
-	font-weight: bold;
-	line-height: 1.4;
-	padding: 10px;
-	width: 180px;
-	text-decoration: none;
-
-}
-
-
-@media only screen and (max-width:767px) {
-
-	.footerOne{
-		padding: 30px;
-	}
-
-	.footerOne .footerTwo,
-	.footerOne .footerFour{
-		float: none;
-		max-width: 250px;
-		margin: 0 auto;
-		position: relative;
-		right: 100px;
-	}
-
-	.footerOne .footerTwo{
-		margin-bottom: 40px;
-	}
-
-	.footerOne form{
-		margin-top: 30px;
-	}
-
-	.footerOne form{
-		display: block;
-	}
-
-	.footerOne form button{
-		float: none;
-	}
 }
