--- a/views/pages/user-signin-up/sign-up.ejs
+++ b/views/pages/user-signin-up/sign-up.ejs
@@ -52,7 +52,7 @@
             </fieldset>
             <input class="input" type="submit" value="Sign Up">
         </form>
-        <p>Do you have an account? <a href='/sign-in' target="_blank" rel="noopener noreferrer">Sign In</a></p>
+        <p>Do you have an account? <a href='/'  rel="noopener noreferrer">Sign In</a></p>
     </div>
 
 
