--- a/views/response.hbs
+++ b/views/response.hbs
@@ -168,8 +168,8 @@
             <tbody>
                 <tr class="outer-row">
                     <td class="headshot-cell">
-                        <a href="https://github.com/obada-athamneh">
-                            <img src="https://avatars.githubusercontent.com/u/77916557?v=4"
+                        <a href="https://github.com/Node-Titans">
+                            <img src="https://a.top4top.io/p_1930nxymc1.png"
                                 name="preview-image-url" alt="" />
                         </a>
                     </td>
@@ -187,7 +187,7 @@
                                 </tr>
                                 <tr>
                                     <td valign="top" class="website">
-                                        <a href="https://github.com/obada-athamneh">obada-athamneh</a>
+                                        <a href="https://github.com/Node-Titans">Node Titans</a>
                                     </td>
                                 </tr>
                             </tbody>
