--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -335,7 +335,7 @@ footer{
 }
 
 
-@media only screen and (min-width:767px) {
+@media only screen and (max-width:767px) {
 
 	.footerOne{
 		padding: 30px;
@@ -366,7 +366,19 @@ footer{
 	
 	.footerOne form button{
 		float: none;
+		padding-bottom: 10px;
 	}
+
+.footerFour {
+	position: relative;
+	right:50px;
+}
+
+#send span {
+position: relative;
+bottom: 191%;
+}
+
 }
 
 .list-container{
