--- a/views/pages/layout/footer.ejs
+++ b/views/pages/layout/footer.ejs
@@ -43,7 +43,7 @@
         <form>
             <input  type="email" name="email" placeholder="Email">
             <textarea name="message" placeholder="Message"></textarea>
-            <button type="button" id="send">Send</button>
+            <button type="button" id="send"><span>Send</span></button>
         </form>
         <script>
             $(document).ready(function () {
