--- a/views/pages/user-signin-up/sign-up.ejs
+++ b/views/pages/user-signin-up/sign-up.ejs
@@ -47,7 +47,7 @@
                 <input class="input" type="number" id="checkAge" name="age" value="checkAge" placeholder="Enter your age" required>
                 <br>
                 <input type="checkbox" id="accept" name="accept" value="accept" required>
-                <label for="accept">I accept EventsFull's use of my data for the service</label>
+                <label for="accept" class="terms">I accept EventsFull's use of my data for the service</label>
                 <br>
             </fieldset>
             <input class="input" type="submit" value="Sign Up">
