--- a/views/pages/layout/header.ejs
+++ b/views/pages/layout/header.ejs
@@ -17,11 +17,15 @@
             <input type="hidden" value="US" name="countryCode">
                 <a href="javascript:{}" onclick="document.getElementById('search').submit(); return false;">Search</a>
                 </form>
-            <a href="/user">Your list</a>    
-            <a href="/">sign in</a>
-            <a href="/profile">profile</a>
             <a href="/about">About Us</a>
+              <% if (user) { %>
+            <a href="/user">Your list</a>    
+            <a href="/profile">profile</a>
             <a href="/logout">Logout</a>
+            <% } %>
+              <%  if (user === false) { %>
+            <a href="/">sign in</a>
+              <% } %>
         </div>
 
         <div class="menu-wrap" >
@@ -41,11 +45,17 @@
                 </form>
                 </li> 
             
-           <li> <a href="/user">Your list</a> </li> 
-            <li> <a href="/">sign in</a></li>  
-             <li>  <a href="/profile">profile</a></li>    
            <li>  <a href="/about">About Us</a></li>  
+
+           <% if (user) { %>
+           <li>  <a href="/profile">profile</a></li>    
+           <li> <a href="/user">Your list</a> </li> 
             <li> <a href="/logout">Logout</a></li>  
+           <% }  %>
+             <% if (user === false) { %>
+
+            <li> <a href="/">sign in</a></li> 
+             <% } %>
           </ul>
         </div>
       </div>
