fixing contact us

--- a/views/response.hbs
+++ b/views/response.hbs
@@ -169,7 +169,7 @@
                 <tr class="outer-row">
                     <td class="headshot-cell">
                         <a href="https://github.com/Node-Titans">
-                            <img src="https://a.top4top.io/p_1930nxymc1.png"
+                            <img src="https://h.top4top.io/p_19306nnja1.png"
                                 name="preview-image-url" alt="" />
                         </a>
                     </td>
@@ -187,7 +187,7 @@
                                 </tr>
                                 <tr>
                                     <td valign="top" class="website">
-                                        <a href="https://github.com/Node-Titans">Node Titans</a>
+                                        <a style=" text-decoration: underline;" href="https://github.com/Node-Titans">Node Titans</a>
                                     </td>
                                 </tr>
                             </tbody>
