--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -36,7 +36,14 @@
   margin-top: 5%;
   position: absolute;
   bottom: 7px; 
+  cursor: pointer;
 }
+
+.btn1:hover{
+  opacity: 0.3;
+  background-color: #35bbbe;
+}
+
 /********************************************************* about Us css*********************************************************************** */
 /* -------------------------------------------------------------------------------------------- ---------------------------------*/
 
